--- a/src/modules/home/style.css
+++ b/src/modules/home/style.css
@@ -1,75 +1,7 @@
-html,
-body {
-    height: 100%;
-    width: 100%;
-}
-
-.category >>> .el-tree-node__label {
-    font-size: 16px;
-}
-
 .main-body {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    background-color: #fff;
-    overflow: hidden;
-    font-size: 18px;
-    font-family: STFangSong, Helvetica, Arial, Vernada, Tahoma, STXihei, 'Microsoft YaHei', 'Songti SC', SimSun, Heiti,
-        sans-serif;
-
-    & .navigation-box {
-        height: 50px;
-        color: #777;
-        border-bottom: 1px solid #e8e8e8;
-        display: flex;
-        justify-content: space-between;
-
-        & .blog-logo {
-            font-size: 24px;
-            line-height: 50px;
-            text-align: center;
-            padding: 0 20px;
-
-            & .iconjidan {
-                font-size: 24px;
-            }
-        }
-
-        & .nav-area {
-            padding: 0 20px;
-            & .nav-item {
-                display: inline-block;
-                height: 50px;
-                line-height: 50px;
-                text-align: center;
-                font-size: 20px;
-                padding: 0 10px;
-                cursor: pointer;
-            }
-            & .nav-item:hover {
-                background-color: #f5f5f5;
-            }
-        }
-    }
-
     & .content-box {
-        height: calc(100% - 50px);
-        display: flex;
-
-        & .category {
-            width: 300px;
-            height: 100%;
-            padding: 10px;
-            box-sizing: border-box;
-            border-right: 1px solid #e8e8e8;
-        }
-
-        & .doc {
-            flex: 1;
-            height: 100%;
-            padding: 0 40px;
-            overflow-y: auto;
+        & >>> .el-tree-node__label {
+            font-size: 16px;
         }
     }
 }
