update：新增分类菜单功能

--- a/src/components/common/layout.css
+++ b/src/components/common/layout.css
@@ -52,6 +52,7 @@
     }
 
     & .content-box {
+        position: relative;
         height: calc(100% - 50px);
         padding: 10px;
         box-sizing: border-box;
