--- a/src/components/common/layout.css
+++ b/src/components/common/layout.css
@@ -1,13 +1,9 @@
 .main-body {
     width: 100%;
     height: 100%;
-    min-width: 800px;
-    position: relative;
     background-color: #fff;
     overflow: hidden;
     font-size: 18px;
-    font-family: STFangSong, Helvetica, Arial, Vernada, Tahoma, STXihei, 'Microsoft YaHei', 'Songti SC', SimSun, Heiti,
-        sans-serif;
 
     & .navigation-box {
         height: 50px;
@@ -16,7 +12,6 @@
         box-shadow: 0 2px 8px #f0f1f2;
         display: flex;
         justify-content: space-between;
-        position: relative;
 
         & a {
             color: #777;
@@ -45,28 +40,42 @@
             }
         }
 
-        & .nav-area {
-            padding: 0 20px;
-
-            & .nav-item {
-                display: inline-block;
-                height: 50px;
-                line-height: 50px;
-                text-align: center;
-                font-size: 20px;
-                padding: 0 10px;
+        @media screen and (max-width: 700px) {
+            & .nav-area {
+                display: none;
             }
+        }
 
-            & .nav-item:hover {
-                background-color: #f5f5f5;
+        @media screen and (min-width: 700px) {
+            & .nav-area {
+                padding: 0 20px;
+
+                & .nav-item {
+                    display: inline-block;
+                    height: 50px;
+                    line-height: 50px;
+                    text-align: center;
+                    font-size: 20px;
+                    padding: 0 10px;
+                }
+
+                & .nav-item:hover {
+                    background-color: #f5f5f5;
+                }
             }
         }
     }
 
-    & .content-box {
-        position: relative;
+    & .content-wrapper {
         height: calc(100% - 50px);
-        padding: 15px 0;
-        box-sizing: border-box;
+        overflow: auto;
+
+        & .content-box {
+            padding: 15px;
+            max-width: 677px;
+            box-sizing: border-box;
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
 }
