--- a/src/components/common/layout.css
+++ b/src/components/common/layout.css
@@ -5,6 +5,18 @@
     overflow: hidden;
     font-size: 18px;
 
+    .category-switcher {
+        position: fixed;
+        text-align: center;
+        cursor: pointer;
+        z-index: 500;
+        
+        & .iconfont {
+            color: #777;
+            font-size: 30px !important;
+        }
+    }
+
     & .navigation-box {
         height: 50px;
         color: #777;
@@ -37,31 +49,6 @@
                 background-position: center center;
                 background-repeat: no-repeat;
                 background-size: 90% 90%;
-            }
-        }
-
-        @media screen and (max-width: 700px) {
-            & .nav-area {
-                display: none;
-            }
-        }
-
-        @media screen and (min-width: 700px) {
-            & .nav-area {
-                padding: 0 20px;
-
-                & .nav-item {
-                    display: inline-block;
-                    height: 50px;
-                    line-height: 50px;
-                    text-align: center;
-                    font-size: 20px;
-                    padding: 0 10px;
-                }
-
-                & .nav-item:hover {
-                    background-color: #f5f5f5;
-                }
             }
         }
     }
