update：提取主题色系

--- a/src/components/category-switcher/category-tree/style.css
+++ b/src/components/category-switcher/category-tree/style.css
@@ -1,3 +1,5 @@
+@import '@app/components/common/variables.css';
+
 .category-tree-mask {
     position: fixed;
     top: 0;
@@ -14,15 +16,16 @@
         height: 100%;
         box-sizing: border-box;
         padding: 10px 0;
-        background-color: #2f2f2f;
+        background-color: var(--primary);
 
         & .category-tree {
             height: 100%;
-            background-color: #2f2f2f;
-            color: #fff;
+            background-color: var(--primary);
+            color: var(--nav-color);
+
             & .el-tree-node__content:hover {
-                color: #5e97d4;
-                background-color: #2f2f2f;
+                color: var(--nav-highlight);
+                background-color: var(--primary);
             }
         }
     }
@@ -34,6 +37,6 @@
 }
 
 .el-tree--highlight-current .el-tree-node.is-current > .el-tree-node__content {
-    color: #fff;
-    background-color: #2f2f2f;
+    color: var(--nav-color);
+    background-color: var(--primary);
 }
