--- a/src/components/category-switcher/style.css
+++ b/src/components/category-switcher/style.css
@@ -1,3 +1,5 @@
+@import '@app/components/common/variables.css';
+
 .category-switcher {
     position: fixed;
     text-align: center;
@@ -13,7 +15,7 @@
         border-radius: 3px;
 
         & .iconfont {
-            color: #777;
+            color: var(--nav-color);
             font-size: 30px !important;
         }
     }
@@ -24,12 +26,12 @@
         line-height: 50px;
         top: 50%;
         transform: translateY(-50%);
-        background-color: #d6d6d6;
+        background-color: var(--info);
         border-top-right-radius: 6px;
         border-bottom-right-radius: 6px;
 
         & .iconfont {
-            color: #fff;
+            color: var(--nav-color);
             font-size: 20px !important;
         }
     }
@@ -37,6 +39,6 @@
 
 @media screen and (min-width: 600px) {
     .category-switcher:hover {
-        background-color: #777;
+        background-color: var(--primary);
     }
 }
