--- a/src/modules/home/style.css
+++ b/src/modules/home/style.css
@@ -1,3 +1,5 @@
+@import '@app/components/common/variables.css';
+
 .main-body {
     & .content-box {
         & .article-list {
@@ -5,12 +7,12 @@
                 height: 80px;
                 padding: 0 20px;
                 margin: 10px 0;
-                border: 1px solid #eee;
                 box-sizing: border-box;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                border-radius: 8px;
+                position: relative;
+                border-bottom: 1px solid var(--boder-color);
 
                 & .date,
                 & .title {
@@ -20,19 +22,19 @@
                 }
 
                 & .date {
-                    color: #b7b7b7;
+                    color: var(--info);
                     font-size: 16px;
                     margin-bottom: 10px;
                 }
 
                 & .title {
                     font-size: 22px;
-                    color: #5e97d4;
+                    color: var(--primary);
                     text-decoration: none;
                 }
 
                 & .title:hover {
-                    text-decoration: underline;
+                    color: var(--highlight);
                 }
             }
         }
