--- a/src/components/category-switcher/category-tree/style.css
+++ b/src/components/category-switcher/category-tree/style.css
@@ -22,6 +22,7 @@
             height: 100%;
             background-color: var(--primary);
             color: var(--nav-color);
+            overflow-y: auto;
 
             & .el-tree-node__content:hover {
                 color: var(--nav-highlight);
