update: 优化文章的阅读体验

--- a/src/components/category-switcher/category-tree/style.css
+++ b/src/components/category-switcher/category-tree/style.css
@@ -29,6 +29,10 @@
                 background-color: var(--primary);
             }
         }
+
+        & .category-tree::-webkit-scrollbar-track {
+            background-color: var(--primary);
+        }
     }
 }
 
