--- a/src/components/category-switcher/category-tree/template.html
+++ b/src/components/category-switcher/category-tree/template.html
@@ -1,7 +1,7 @@
 <div class="category-tree-mask" @mousedown.prevent="hideSelf">
     <div class="category-tree-box" @mousedown.stop="">
         <el-tree
-            class="category-tree"
+            class="category-tree uniform-scroll"
             :data="category"
             :props="defaultProps"
             :highlight-current="true"
