feat: 统一设定文章的作者信息

--- a/src/components/common/hljs.css
+++ b/src/components/common/hljs.css
@@ -37,6 +37,12 @@ http://zenorocha.mit-license.org
     margin: 10px 0;
 }
 
+.markdown-root hr {
+    border: 0;
+    background-color: var(--border-color);
+    height: 1px;
+}
+
 .hljs {
     display: block;
     overflow-x: auto;
