--- a/src/components/common/variables.css
+++ b/src/components/common/variables.css
@@ -2,10 +2,12 @@
     --bg-color: #fff;
     --primary: #24292e;
     --info: #b7b7b7;
-    --boder-color: #eee;
+    --border-color: #eee;
     --highlight: #0366d6;
     --nav-color: #fff;
     --nav-highlight: #ffffffb3;
+    --wx-primary: #22ab39;
+    --zfb-primary: #1777ff;
     /* --------------------------- 滚动条色号 --------------------------- */
     --scrollWidth: 10px;
     --scrollbarLightGray: #f5f5f5;
