--- a/src/modules/home/style.css
+++ b/src/modules/home/style.css
@@ -11,7 +11,7 @@
                 flex-direction: column;
                 justify-content: center;
                 position: relative;
-                border-bottom: 1px solid var(--boder-color);
+                border-bottom: 1px solid var(--border-color);
 
                 & .date,
                 & .title {
