--- a/src/components/common/variables.css
+++ b/src/components/common/variables.css
@@ -8,6 +8,7 @@
     --nav-highlight: #ffffffb3;
     --wx-primary: #22ab39;
     --zfb-primary: #1777ff;
+    --active-nav: #73b5ff;
     /* --------------------------- 滚动条色号 --------------------------- */
     --scrollWidth: 10px;
     --scrollbarLightGray: #f5f5f5;
