--- a/src/components/common/layout.css
+++ b/src/components/common/layout.css
@@ -45,6 +45,12 @@
             }
         }
 
+        & .nav-area {
+            & .nav-item.active {
+                color: var(--active-nav);
+            }
+        }
+
         @media screen and (min-width: 970px) {
             & .nav-area {
                 padding: 0 20px;
