--- a/src/components/common/layout.css
+++ b/src/components/common/layout.css
@@ -40,116 +40,56 @@
                 background-size: 100% 100%;
             }
 
-            & .logo-txt:hover {
+            /* & .logo-txt:hover {
                 color: var(--nav-highlight);
-            }
+            } */
         }
 
         & .nav-area {
+            padding: 0 20px;
+            display: flex;
+            align-items: center;
+
+            & .nav-item {
+                display: inline-block;
+                height: 50px;
+                line-height: 50px;
+                text-align: center;
+                font-size: 20px;
+                padding: 0 10px;
+
+                & i {
+                    font-size: 20px !important;
+                }
+
+                & .nav-label {
+                    padding-left: 5px;
+                }
+            }
+
             & .nav-item.active {
                 color: var(--active-nav);
             }
-        }
 
-        @media screen and (min-width: 970px) {
-            & .nav-area {
-                padding: 0 20px;
-                display: flex;
-                align-items: center;
+            & .nav-item:hover {
+                color: var(--nav-highlight);
 
-                & .nav-item {
-                    display: inline-block;
-                    height: 50px;
-                    line-height: 50px;
-                    text-align: center;
-                    font-size: 20px;
-                    padding: 0 10px;
-
-                    & i {
-                        font-size: 23px !important;
-                    }
-
-                    & .nav-label {
-                        padding-left: 5px;
-                    }
-                }
-
-                & .nav-item:hover {
-                    color: var(--nav-highlight);
-
-                    & i {
-                        color: var(--nav-highlight) !important;
-                    }
+                & i {
+                    color: var(--nav-highlight) !important;
                 }
             }
         }
 
-        @media screen and (max-width: 970px) and (min-width: 720px) {
+        @media screen and (max-width: 980px) and (min-width: 600px) {
             & .nav-area {
-                padding: 0 20px;
-                display: flex;
-                align-items: center;
-
                 & .nav-item {
-                    display: inline-block;
-                    height: 50px;
-                    line-height: 50px;
-                    text-align: center;
-                    font-size: 20px;
-                    padding: 0 10px;
-
                     & i {
-                        font-size: 23px !important;
+                        font-size: 25px !important;
                     }
 
                     & .nav-label {
                         display: none;
                     }
-                }
-
-                & .nav-item:hover {
-                    color: var(--nav-highlight);
-
-                    & i {
-                        color: var(--nav-highlight) !important;
-                    }
-                }
-            }
-        }
-
-        @media screen and (max-width: 720px) and (min-width: 600px) {
-            & .nav-area {
-                padding: 0 20px;
-                display: flex;
-                align-items: center;
-
-                & .nav-item {
-                    display: inline-block;
-                    height: 50px;
-                    line-height: 50px;
-                    text-align: center;
-                    font-size: 20px;
-                    padding: 0 10px;
-
-                    & i {
-                        font-size: 23px !important;
-                    }
-
-                    & .nav-label {
-                        display: none;
-                    }
-                }
-
-                & .nav-item:hover {
-                    color: var(--nav-highlight);
-
-                    & i {
-                        color: var(--nav-highlight) !important;
-                    }
-                }
-
-                & .filter-ipt {
-                    display: none;
                 }
             }
         }
