--- a/src/components/category-switcher/style.css
+++ b/src/components/category-switcher/style.css
@@ -1,44 +1,15 @@
 @import '@app/components/common/variables.css';
 
 .category-switcher {
-    position: fixed;
-    text-align: center;
-    cursor: pointer;
-    z-index: 500;
+    padding: 0 4px;
+    font-size: 20px;
+    margin-right: 5px;
 
-    @media screen and (max-width: 600px) {
-        top: 5px;
-        right: 15px;
-        width: 40px;
-        height: 40px;
-        line-height: 40px;
-        border-radius: 3px;
-
-        & .iconfont {
-            color: var(--nav-color);
-            font-size: 30px !important;
-        }
-    }
-
-    @media screen and (min-width: 600px) {
-        width: 30px;
-        height: 50px;
-        line-height: 50px;
-        top: 50%;
-        transform: translateY(-50%);
-        background-color: var(--info);
-        border-top-right-radius: 6px;
-        border-bottom-right-radius: 6px;
-
-        & .iconfont {
-            color: var(--nav-color);
-            font-size: 20px !important;
-        }
+    & .iconfont {
+        font-size: 20px !important;
     }
 }
 
-@media screen and (min-width: 600px) {
-    .category-switcher:hover {
-        background-color: var(--primary);
-    }
+.category-switcher:hover {
+    color: var(--nav-highlight);
 }
