--- a/src/components/common/hljs.css
+++ b/src/components/common/hljs.css
@@ -64,6 +64,13 @@ http://zenorocha.mit-license.org
     text-decoration: none;
 }
 
+.markdown-root blockquote {
+    background-color: #f1f1f1;
+    padding: 10px;
+    border-radius: 5px;
+    color: #555;
+}
+
 .hljs {
     display: block;
     overflow-x: auto;
