--- a/src/modules/paper/style.css
+++ b/src/modules/paper/style.css
@@ -8,6 +8,7 @@
                 & >>> img {
                     width: 100% !important;
                     height: auto !important;
+                    padding: 10px 0;
                 }
             }
         }
